--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <a href="https://github.com/ammarbelushi" target="_blank" class="project__description--link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.mywebsite.com" class="project__description--link">
+                    <a href="https://ammarbelushi.github.io/eportfolio.github.io/" class="project__description--link">
                         <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -194,7 +194,7 @@
                       <a href="https://github.com/ammarbelushi" target="_blank" class="project__description--link">
                           <i class="fab fa-github"></i>
                       </a>
-                      <a href="https://www.mywebsite.com" class="project__description--link">
+                      <a href="https://ammarbelushi.github.io/eportfolio.github.io/" class="project__description--link">
                           <i class="fas fa-link"></i>
                       </a>
                     </div>
@@ -225,7 +225,7 @@ Land your dream tech job guaranteed.
                       <a href="https://github.com/ammarbelushi" target="_blank" class="project__description--link">
                           <i class="fab fa-github"></i>
                       </a>
-                      <a href="https://www.mywebsite.com" class="project__description--link">
+                      <a href="https://ammarbelushi.github.io/eportfolio.github.io/" class="project__description--link">
                           <i class="fas fa-link"></i>
                       </a>
                     </div>
